lots of trips form and other cleanup

--- a/app/views/repeating_trips/_repetition_panel.html.haml
+++ b/app/views/repeating_trips/_repetition_panel.html.haml
@@ -2,5 +2,5 @@
   .panel-heading
     %h3.panel-title
       = translate_helper(:repetition)
-  .panel-body{style: 'padding: 5px;'}
+  .panel-body.form-horizontal{style: 'padding: 5px;'}
     = render 'repeating_trips/repetition_fields', f: f
