--- a/app/views/shared/_action_log_panel.html.haml
+++ b/app/views/shared/_action_log_panel.html.haml
@@ -2,8 +2,8 @@
   .panel-heading
     %h3.panel-title
       = translate_helper(:action_log)
-  .panel-body{style: 'padding: 5px;'}
-    %table.table.table-striped.table-bordered
+  .panel-body
+    %table.table
       %thead
         %tr
           %th= translate_helper("log_date_time")
