--- a/app/views/customers/_customer_eligibility_list.html.haml
+++ b/app/views/customers/_customer_eligibility_list.html.haml
@@ -3,17 +3,17 @@
   - has_eligible = false
   - if customer.age_eligible?
     - has_eligible = true
-    .form-group.col-sm-12
-      .col-sm-7.control-label
+    .form-group
+      .form-label
         %b= translate_helper(:age_eligible)
-      .col-sm-5
+      .form-field
         %span.pull-right= yes_label
   - if customer.ada_eligible?
     - has_eligible = true
-    .form-group.col-sm-12
-      .col-sm-7.control-label
+    .form-group
+      .form-label
         %b= translate_helper(:ada_eligible)
-      .col-sm-5
+      .form-field
         %span.pull-right= yes_label
     - eligible_ada_questions = customer.customer_ada_questions.eligible
     - if eligible_ada_questions.any?
@@ -21,18 +21,19 @@
         - eligible_ada_questions.includes(:ada_question).references(:ada_question).each do |question|
           - next unless question.ada_question
           .form-group
-            .col-sm-9.control-label
+            .form-label
               = question.ada_question.name
-            .col-sm-3
+            .form-field
               %span.pull-right= yes_label
   - customer.customer_eligibilities.eligible.includes(:eligibility).references(:eligibility).each do |elig|
     - next unless elig.eligibility && elig.eligibility.description
     - has_eligible = true
-    .form-group.col-sm-12
-      .col-sm-7.control-label
+    .form-group
+      .form-label
         %b= elig.eligibility.description
-      .col-sm-5
+      .form-field
         %span.pull-right= yes_label
   - unless has_eligible
-    .form-group.col-sm-12
-      %span (None eligibile)
+    .form-group
+      .form-label
+        %span (None eligibile)
