--- a/app/views/runs/_form_header.html.haml
+++ b/app/views/runs/_form_header.html.haml
@@ -1,5 +1,5 @@
 #page-header
-  - if edit_mode == :new=
+  - if edit_mode == :new
     %h1.page-title
       = translate_helper("new_run")
     .action-buttons
