provider form ui tweaks

--- a/app/views/application_settings/index.html.erb
+++ b/app/views/application_settings/index.html.erb
@@ -31,4 +31,4 @@
 
 <hr/>
 
-<%= link_to translate_helper("application_settings_edit_link_text"), {action: :edit}, class: 'action-bttn' %>
+<%= link_to translate_helper("application_settings_edit_link_text"), {action: :edit}, class: 'btn btn-primary' %>
