only wanted to limit the width of the login form

--- a/app/assets/stylesheets/ridepilot-ui.scss
+++ b/app/assets/stylesheets/ridepilot-ui.scss
@@ -825,10 +825,12 @@ form {
 	}
 }
 
-form#new_user {
-	max-width: 400px;
-	label {
-		margin: 1em 0 .5em 0;
+body.sessions.new {
+  form#new_user {
+		max-width: 400px;
+		label {
+			margin: 1em 0 .5em 0;
+		}
 	}
 }
 
